--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,7 @@ body {
 
 h1 {
   font-size: 3rem;
+  text-align: center;
   letter-spacing: 0.9px;
   background: linear-gradient(
     90deg,
@@ -71,19 +72,8 @@ h1 {
 }
 
 .myButton {
-  background-color: #0f5ab7;
-	border-radius:20px;
-	border: 1px solid #d70e0e;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:1.25rem;
-  padding: 10px 20px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #283966;
-  letter-spacing: 0.75px;
   margin: 10px;
+  padding: 10px 20px;
 }
 .myButton:hover {
 	background-color:#476e9e;
@@ -189,12 +179,12 @@ h1 {
 
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: left;
   flex-wrap: wrap;
 }
 
-.card {
-  width: 300px;
+.myCard {
+  width: 350px;
   height: 300px;
   margin: 1.5rem;
   color: #000;
@@ -202,6 +192,7 @@ h1 {
   border-radius: 12px;
   overflow: hidden;
   border: solid 2px #ccc;
+  text-align: left;
 
  /*  transition: all 0.4s cubic-bezier(0.175, 0.885, 0, 1);
   box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1); */
